fixed - search field text can overflow on search icon

--- a/web/app/themes/Foody/resources/sass/forms/_fields.scss
+++ b/web/app/themes/Foody/resources/sass/forms/_fields.scss
@@ -58,6 +58,7 @@ div.checkbox {
       text-align: right;
       line-height: $input-height;
       padding-right: 15px;
+      padding-left: 5%;
 
       // Autoprefixer
       //noinspection CssInvalidPseudoSelector
